Rework of Send flow + refactoring

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -44,6 +44,10 @@
         <item name="android:textSize">10sp</item>
     </style>
 
+    <style name="MoneroLabel.Gray">
+        <item name="android:textColor">@color/moneroGray</item>
+    </style>
+
     <style name="MoneroLabel.Caps">
         <item name="android:textAllCaps">true</item>
     </style>
@@ -60,9 +64,22 @@
         <item name="android:textSize">12sp</item>
     </style>
 
+    <style name="MoneroText.Funds">
+        <item name="android:textSize">16sp</item>
+        <item name="android:textColor">@color/moneroFab</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+
+
     <style name="MoneroText.Balance">
         <item name="android:textSize">32sp</item>
         <item name="android:textColor">@color/moneroBlack</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+
+    <style name="MoneroText.Balance.Orange">
+        <item name="android:textSize">32sp</item>
+        <item name="android:textColor">@color/gradientOrange</item>
         <item name="android:textStyle">bold</item>
     </style>
 
@@ -94,6 +111,12 @@
         <item name="android:textSize">10sp</item>
         <item name="android:textColor">#FF616161</item>
         <item name="android:textStyle">normal</item>
+    </style>
+
+    <!-- textSize is in dp here to match the layout of the numpad-->
+    <style name="MoneroLabel.NumPad">
+        <item name="android:textSize">36dp</item>
+        <item name="android:textColor">@color/moneroBlack</item>
     </style>
 
     <style name="MoneroLabel.Title">
@@ -151,6 +174,20 @@
         <item name="android:textSize">18dp</item>
     </style>
 
+    <style name="MoneroText.Confirm">
+        <item name="android:textSize">16dp</item>
+    </style>
+
+    <style name="MoneroText.Confirm.Label">
+        <item name="android:textSize">16dp</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+
+    <style name="MoneroText.Label.Heading">
+        <item name="android:textAllCaps">true</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+
     <style name="MoneroText.Label.Medium">
         <item name="android:textSize">14dp</item>
     </style>
@@ -163,14 +200,25 @@
         <item name="android:textSize">12dp</item>
     </style>
 
+    <style name="MoneroText.Medium.Bold">
+        <item name="android:textStyle">bold</item>
+    </style>
+
     <style name="MoneroText.Large">
         <item name="android:textSize">24dp</item>
+    </style>
+
+
+    <style name="MoneroText.Sucess">
+        <item name="android:textSize">40dp</item>
+        <item name="android:textColor">@color/gradientOrange</item>
     </style>
 
     <style name="MoneroText.Button" parent="@android:style/TextAppearance.DeviceDefault.Medium">
         <item name="android:textSize">14sp</item>
         <item name="android:textColor">@color/gradientOrange</item>
         <item name="android:textStyle">bold</item>
+        <item name="android:textAllCaps">true</item>
     </style>
 
     <style name="MoneroText.Button.Small">
@@ -193,8 +241,7 @@
         <item name="android:background">@color/gradientPink</item>
     </style>
 
-    <style name="MoneroButton.ReallySend">
-    </style>
+    <style name="MoneroButton.ReallySend"></style>
 
     <style name="MoneroButton.Take">
         <item name="android:background">@color/take</item>
@@ -208,6 +255,13 @@
         <item name="android:textColor">?colorPrimary</item>
         <item name="android:backgroundTint">@color/gradientPink</item>
     </style>
+
+    <style name="MoneroEdit.Amount">
+        <!--item name="android:textSize">32sp</item-->
+        <item name="android:textColor">@color/gradientOrange</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+
 
     <style name="MoneroEdit.Medium" parent="MoneroText.Medium">
         <item name="android:textColor">?colorPrimary</item>
