--- a/app/src/main/res/layout/view_exchange_text.xml
+++ b/app/src/main/res/layout/view_exchange_text.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <merge xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:showIn="LinearLayout"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:showIn="LinearLayout">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -19,56 +18,48 @@
             android:gravity="center"
             android:textAlignment="center" />
 
-        <com.m2049r.xmrwallet.widget.CTextInputLayout
-            android:id="@+id/etAmount"
-            android:layout_width="match_parent"
+        <TextView
+            android:id="@+id/tvAmountA"
+            style="@style/MoneroText.Balance.Orange"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_gravity="center|start"
             android:layout_marginStart="16dp"
-            app:counterEnabled="false"
-            app:errorEnabled="true">
+            android:layout_weight="3"
+            android:hint="@string/send_amount_hint"
+            android:padding="4dp"
+            android:singleLine="true"
+            tools:text="87.00000" />
 
-            <android.support.design.widget.TextInputEditText
-                style="@style/MoneroEdit"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="start"
-                android:hint="@string/receive_amount_hint"
-                android:imeOptions="actionDone"
-                android:inputType="numberDecimal"
-                tools:text="87.00000" />
-
-        </com.m2049r.xmrwallet.widget.CTextInputLayout>
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="4dp"
+        android:layout_marginTop="8dp"
         android:orientation="horizontal">
 
         <Spinner
             android:id="@+id/sCurrencyB"
-            style="@style/MoneroSpinnerGray"
             android:layout_width="56sp"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:entries="@array/currency"
             android:gravity="center"
-            android:paddingBottom="8dp"
-            android:paddingTop="8dp"
             android:textAlignment="center" />
 
         <TextView
             android:id="@+id/tvAmountB"
             style="@style/MoneroText"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center|start"
             android:layout_marginStart="16dp"
             android:layout_weight="3"
+            android:hint="@string/send_amount_hint"
             android:padding="4dp"
             android:singleLine="true"
-            android:text="--"
             tools:text="87.00000" />
 
         <FrameLayout
