--- a/app/src/main/res/layout/fragment_send_amount.xml
+++ b/app/src/main/res/layout/fragment_send_amount.xml
@@ -11,8 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:gravity="center"
-        android:text="@string/send_available" />
+        android:gravity="center" />
 
     <com.m2049r.xmrwallet.widget.ExchangeTextView
         android:id="@+id/evAmount"
