--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -70,6 +70,10 @@
         <item name="android:textStyle">bold</item>
     </style>
 
+    <style name="MoneroText.Info">
+        <item name="android:textSize">16sp</item>
+        <item name="android:textColor">@color/moneroFab</item>
+    </style>
 
     <style name="MoneroText.Balance">
         <item name="android:textSize">32sp</item>
