Satoshis Dream xmr.to integration

--- a/app/src/main/res/layout/fragment_about.xml
+++ b/app/src/main/res/layout/fragment_about.xml
@@ -18,6 +18,13 @@
             android:src="@mipmap/ic_launcher" />
 
         <TextView
+            style="@style/MoneroLabel.Caps"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="@string/about_whoami" />
+
+        <TextView
             android:id="@+id/tvVersion"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -29,8 +36,8 @@
             style="@style/MoneroText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/header_top"
             android:layout_marginBottom="@dimen/header_top"
+            android:layout_marginTop="@dimen/header_top"
             android:gravity="start"
             android:textSize="10sp"
             tools:text="@string/menu_help" />
