--- a/app/src/main/res/layout/fragment_send_success.xml
+++ b/app/src/main/res/layout/fragment_send_success.xml
@@ -13,30 +13,55 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="16dp"
-            android:layout_marginTop="4dp"
-            android:gravity="center"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="16dp"
             android:orientation="horizontal">
 
             <ImageView
-                android:layout_width="96dp"
-                android:layout_height="96dp"
-                android:layout_gravity="center"
-                android:layout_margin="16dp"
+                android:layout_width="72dp"
+                android:layout_height="72dp"
+                android:layout_gravity="top"
+                android:layout_marginEnd="24dp"
+                android:padding="6dp"
                 android:src="@drawable/ic_check_circle" />
 
-            <TextView
-                style="@style/MoneroText.Sucess"
-                android:layout_width="wrap_content"
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
-                android:layout_marginStart="16dp"
-                android:text="@string/label_send_success" />
+                android:orientation="vertical">
+
+                <TextView
+                    style="@style/MoneroText.Success"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:text="@string/label_send_success" />
+
+                <TextView
+                    android:id="@+id/tvTxAmount"
+                    style="@style/MoneroText.Balance.Orange"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="2"
+                    android:textAlignment="textEnd"
+                    tools:text="143.008000 XMR" />
+
+                <TextView
+                    android:id="@+id/tvTxFee"
+                    style="@style/MoneroText.Gray.SuccessFee"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="2"
+                    android:textAlignment="textEnd"
+                    tools:text="+0.006817 Fee" />
+
+            </LinearLayout>
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
             android:orientation="horizontal">
 
             <TextView
@@ -47,7 +72,7 @@
                 android:textAlignment="textStart" />
 
             <ImageButton
-                android:id="@+id/bCopyAddress"
+                android:id="@+id/bCopyTxId"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
@@ -86,15 +111,16 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="8dp"
             android:layout_marginTop="4dp"
             android:orientation="horizontal">
 
             <TextView
+                android:id="@+id/labelPaymentId"
                 style="@style/MoneroText.Confirm.Label"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/label_send_payment_id"
-                android:textAlignment="textStart" />
+                android:text="@string/label_send_payment_id" />
 
             <TextView
                 android:id="@+id/tvTxPaymentId"
@@ -102,114 +128,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
-                android:textAlignment="textStart"
                 tools:text="d666a38d4a28fb38" />
         </LinearLayout>
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="4dp"
-            android:orientation="horizontal">
-
-            <TextView
-                style="@style/MoneroText.Confirm.Label"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/label_send_notes"
-                android:textAlignment="textStart" />
-
-            <TextView
-                android:id="@+id/tvTxNotes"
-                style="@style/MoneroText.Confirm"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
-                android:textAlignment="textStart"
-                tools:text="gunegugumobil" />
-        </LinearLayout>
-
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:layout_marginTop="8dp"
-            android:background="@android:color/darker_gray" />
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:orientation="horizontal">
-
-            <TextView
-                android:id="@+id/tvTxAmountLabel"
-                style="@style/MoneroLabel.Gray"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="@string/send_amount_label"
-                android:textAlignment="textStart" />
-
-            <TextView
-                android:id="@+id/tvTxAmount"
-                style="@style/MoneroText.Gray"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="2"
-                android:textAlignment="textEnd"
-                tools:text="143.008000000000" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="4dp"
-            android:orientation="horizontal"
-            android:weightSum="3">
-
-            <TextView
-                android:id="@+id/tvTxFeeLabel"
-                style="@style/MoneroLabel.Gray"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="@string/send_fee_label"
-                android:textAlignment="textStart" />
-
-            <TextView
-                android:id="@+id/tvTxFee"
-                style="@style/MoneroText.Gray"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="2"
-                android:textAlignment="textEnd"
-                tools:text="0.006817000000" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="4dp"
-            android:orientation="horizontal"
-            android:weightSum="3">
-
-            <TextView
-                android:id="@+id/tvTxTotalLabel"
-                style="@style/MoneroLabel.Caps.Black"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="@string/send_total_label"
-                android:textAlignment="textStart" />
-
-            <TextView
-                android:id="@+id/tvTxTotal"
-                style="@style/MoneroText.Black"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="2"
-                android:textAlignment="textEnd"
-                tools:text="143.014817000000" />
-        </LinearLayout>
     </LinearLayout>
 </ScrollView>
