--- a/app/src/main/res/layout/item_transaction.xml
+++ b/app/src/main/res/layout/item_transaction.xml
@@ -16,11 +16,19 @@
         android:orientation="horizontal"
         android:padding="8dp">
 
+        <ImageView
+            android:id="@+id/ivTxType"
+            android:layout_width="16dp"
+            android:layout_height="16dp"
+            android:layout_gravity="center"
+            android:src="@drawable/ic_xmrto_32dp"
+            android:visibility="visible"/>
+
         <LinearLayout
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_weight="11"
+            android:layout_weight="9"
             android:orientation="vertical">
 
             <TextView
@@ -29,7 +37,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="end"
-                tools:text="999999.99999" />
+                tools:text="999.999999" />
 
             <TextView
                 android:id="@+id/tx_fee"
