--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,6 +8,8 @@
     <color name="gradientOrange">#FFFF6105</color>
     <color name="gradientPink">#FFF0006B</color>
 
+    <color name="xmrtoYellow">#FFFFD700</color>
+
     <color name="trafficGray">#9B9B9B</color>
 
     <color name="take">#FF417505</color>
