--- a/app/src/main/res/layout/fragment_send_confirm.xml
+++ b/app/src/main/res/layout/fragment_send_confirm.xml
@@ -183,7 +183,7 @@
             android:layout_marginTop="48dp"
             android:enabled="true"
             android:padding="8dp"
-            android:text="@string/send_send_hint" />
+            android:text="@string/send_send_label" />
 
         <ProgressBar
             android:id="@+id/pbProgressSend"
