--- a/app/src/main/res/values/about.xml
+++ b/app/src/main/res/values/about.xml
@@ -2,14 +2,15 @@
 <resources>
     <string name="about_title">About</string>
     <string name="about_close">Close</string>
-    <string name="about_version">I am monerujo %1$s (%2$d)</string>
+    <string name="about_whoami">I am monerujo</string>
+    <string name="about_version">Version %1$s (%2$d)</string>
 
     <string name="donation_text">
         \"Donate you ungrateful bastards!\"
     </string>
 
     <string name="donation_address_label">Donations Address</string>
-    <string name="donation_address">4AdkPJoxn7JCvAby9szgnt93MSEwdnxdhaASxbTBm6x5dCwmsDep2UYN4FhStDn5i11nsJbpU7oj59ahg8gXb1Mg3viqCuk</string>
+    <string name="donation_address" translatable="false">4AdkPJoxn7JCvAby9szgnt93MSEwdnxdhaASxbTBm6x5dCwmsDep2UYN4FhStDn5i11nsJbpU7oj59ahg8gXb1Mg3viqCuk</string>
 
     <string name="donation_credits"><![CDATA[
         <b>Credits</b>
@@ -64,7 +65,7 @@
         </p>
         ]]></string>
 
-    <string name="about_licenses"><![CDATA[
+    <string name="about_licenses" translatable="false"><![CDATA[
         <h1>Open Source Licenses</h1>
         <h2>Licensed under the Apache License, Version 2.0</h2>
         <h3>monerujo (https://github.com/m2049r/xmrwallet)</h3>
