--- a/app/src/main/res/layout/fragment_receive.xml
+++ b/app/src/main/res/layout/fragment_receive.xml
@@ -121,13 +121,25 @@
                 android:textSize="16sp"
                 android:visibility="invisible" />
 
-            <ImageView
-                android:id="@+id/qrCode"
-                android:layout_width="match_parent"
+            <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
+                android:id="@+id/cvQrCode"
+                android:layout_margin="16dp"
+                android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:adjustViewBounds="true"
-                android:background="#00000000" />
+                android:layout_gravity="center"
+                android:clickable="true"
+                android:foreground="?android:attr/selectableItemBackground"
+                card_view:cardCornerRadius="2dp"
+                card_view:cardElevation="8dp"
+                card_view:contentPadding="4dp">
 
+                <ImageView
+                    android:id="@+id/qrCode"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:adjustViewBounds="true"
+                    android:background="#00000000" />
+            </android.support.v7.widget.CardView>
         </FrameLayout>
     </LinearLayout>
 
