--- a/app/src/main/res/values-es/about.xml
+++ b/app/src/main/res/values-es/about.xml
@@ -5,13 +5,13 @@
     <string name="about_version">Versión %1$s (%2$d)</string>
 
     <string name="donation_text">
-        \"¡Donar, bastardos ingratos!\"
+        \"¡Donad, bastardos ingratos!\"
     </string>
 
-    <string name="donation_address_label">Dirección para donaciones</string>
+    <string name="donation_address_label">Donaciones</string>
 
     <string name="donation_credits"><![CDATA[
-        <b>Creditos</b>
+        <b>Créditos</b>
         <br/>
         m2049r, baltsar777, anhdres, keejef,
         rehrar, EarlOfEgo et al.
