--- a/app/src/main/res/layout/fragment_send_confirm.xml
+++ b/app/src/main/res/layout/fragment_send_confirm.xml
@@ -177,7 +177,7 @@
 
         <Button
             android:id="@+id/bSend"
-            style="@style/MoneroButton"
+            style="@style/MoneroButton.Green"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="48dp"
