--- a/app/src/main/res/values/about.xml
+++ b/app/src/main/res/values/about.xml
@@ -43,6 +43,9 @@
         See their privacy policy at https://www.kraken.com/legal/privacy for
         details on how data in your requests is collected (especially the
         section "Information We Collect Automatically").</p>
+        <p>If you use the app to pay to BTC addresses, you will be using the XMR.TO service.
+        See their privacy policy at https://xmr.to/ for details. Monerujo send them the BTC
+        destination address and amount. Your IP will also be collectable.</p>
         <h2>App Permissions</h2>
         <ul>
         <li>INTERNET : Connect to the Monero Network via a Monero Daemon Node</li>
