--- a/app/src/main/res/layout/fragment_send_new.xml
+++ b/app/src/main/res/layout/fragment_send_new.xml
@@ -30,7 +30,7 @@
             android:id="@+id/bPrev"
             style="@style/MoneroButton"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_weight="1"
             android:drawableStart="@drawable/ic_navigate_prev_white_24dp"
             tools:text="Back" />
@@ -52,7 +52,7 @@
             android:id="@+id/bNext"
             style="@style/MoneroButton"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_weight="1"
             android:drawableEnd="@drawable/ic_navigate_next_white_24dp"
             tools:text="Next" />
