--- a/app/src/main/res/layout/fragment_receive.xml
+++ b/app/src/main/res/layout/fragment_receive.xml
@@ -42,7 +42,7 @@
                 android:layout_gravity="end"
                 android:layout_marginEnd="80dp"
                 android:background="?android:selectableItemBackground"
-                android:enabled="false"
+                android:clickable="false"
                 android:src="@drawable/ic_content_nocopy_black_24dp" />
         </FrameLayout>
 
